# bdogs_main_6797

./: .env.example  .gitignore  .main.py.swp  Dockerfile  Makefile  README.md  add_users.py  additional_pyropackage.py  alembic.ini  all_information.json  app.dockerfile  auth.py  bootstrap.py  docker-compose.yml  get_all_info_db.py  get_dialogs.py  insert_all_info_db.py  main.py  pyproject.toml  pytest.ini  redis.dockerfile  update_users.py
data/: google_api.json
data/logs/: total.log.save
local_storage/: __init__.py
local_storage/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
migration/: env.py
migration/versions/: 2024-10-13_1600-_f120beeba2d7.py  2024-10-19_1244-_2333d25fab40.py  2024-10-25_1548-_2f5fb5854640.py  2024-11-11_1128-chain_ping_9a79a81d521b.py  2025-01-06-init_0edb5ade6931.py  2025-01-08-recreate_tables_with_correct_constraints_cc61f43cb0e1.py  498ce392fca6_init.py  8aa3829ca02e_.py  9e857c6bacda_.py  de580f8edaf3_.py  e0bf37d0a436_.py
scripts/: migrate_scheduler_jobs.py
src/: constants.py  filtres.py
src/config/: __init__.py  _loader.py  _logger_config.py  _scheduler.py  _settings.py  redis.conf  scheduler_singl.py
src/database/: __init__.py  _engine.py  _models.py  db.py
src/funnel/: __init__.py  dispatcher_days.py  types.py
src/models/: _engine.py  _models.py  db.py
src/operations/: base.py
src/repository/: base.py  cards.py  shifts.py  user.py
src/services/: __init__.py  google_dp.py
src/tasks/: close_job.py  scheduler_singl.py
src/uow/: base.py
src/utils/: __init__.py  (+5 more)
tests/: conftest.py
(+65 files in other folders)
