[tool.poetry]
name = "bdogs-main-6797"
version = "0.1.0"
description = ""
authors = ["Keni13-Coder <vladmoldovanov03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
aiohttp = "^3.10.10"
redis = "^5.2.0"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
tgcrypto = "^1.2.5"
asyncpg = "^0.30.0"
google-auth = "^2.36.0"
gspread-asyncio = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
